fix: some layout issues

--- a/src/components/card-list/card-search.module.css
+++ b/src/components/card-list/card-search.module.css
@@ -11,6 +11,7 @@
 }
 
 .search {
+  padding: 1px;
   & > * + * {
     margin-top: 0.75rem;
   }
