--- a/src/pages/settings/settings.module.css
+++ b/src/pages/settings/settings.module.css
@@ -1,8 +1,10 @@
 .settings {
   position: relative;
+  padding: 1rem;
 }
 
-.settings > * + * {
+.settings > * + *,
+.settings-container > * + * {
   margin-top: 1.5rem;
 }
 
